Fix style.css
Fix too big text on mobile phone

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ a {
     text-decoration: none;
 }
 
+body {
+    min-width: 280px;
+    min-height: 500px;
+}
+
 .wrap {
     position: relative;
     overflow: hidden;
@@ -38,7 +43,7 @@ a {
 .logo {
     position: absolute;
     top: 50px;
-    left: 50px;
+    left: 5%;
     z-index: 1;
 }
 
@@ -100,7 +105,7 @@ lottie-player {
 .menu {
     position: absolute;
     top: 40px;
-    right: 40px;
+    right: 5%;
 
     width: 30px;
     height: 25px;
@@ -227,9 +232,26 @@ nav .foreground {
 }
 
 @media (max-width: 900px) {
+    
+    .logo {
+        top: 54px;
+    }
+
+    .logo h1 {
+        font-size: 50px;
+    }
+
     .portfolio, .feedback, .hobby {
         width: 100%;
         height: 100vh;
+    }
+
+    .content h3 {
+        font-size: 30px;
+    }
+    
+    .content p {
+        font-size: 25px;
     }
 
     .menu {
@@ -241,5 +263,24 @@ nav .foreground {
         position: fixed;
         width: 100%;
         right: -100%;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .logo {
+        top: 65px;
+    }
+
+    .logo h1 {
+        font-size: 30px;
+    }
+
+    .content h3 {
+        font-size: 25px;
+    }
+    
+    .content p {
+        font-size: 17px;
     }
 }
